@@ -39,7 +39,7 @@ if (!$gallery->user->canDeleteFromAlbum($gallery->album)
 doctype();
 echo "\n<html>";
 
-if (isset($confirm) && isset($id)) {
+if (isset($deleteItem) && $deleteItem=='yes' && isset($id)) {
 	if (!empty($albumDelete)) {
 		/* Track down the corresponding photo index and remove it */
 		$index = 0;
@@ -84,7 +84,8 @@ if (isset($confirm) && isset($id)) {
 <div align="center">
 <?php
 if ($gallery->album && isset($id)) {
-	echo makeFormIntro("delete_photo.php", array('name' => 'deletephoto_form', 'onsubmit' => 'deletephoto_form.confirm.disabled = true;'));
+	echo makeFormIntro("delete_photo.php", array('name' => 'deletephoto_form', 
+			'onsubmit' => "deletephoto_form.confirm.disabled = true; deletephoto_form.deleteItem.value='yes'"));
 	if (isset($albumDelete)) {
 ?>
 
@@ -129,6 +130,7 @@ $myAlbum->load($id);
 		} 
 	}
 ?>
+<input type="hidden" name="deleteItem" value="no">
 <input type="submit" name="confirm" value="<?php echo _("Delete") ?>">
 <input type="button" name="cancel" value="<?php echo _("Cancel") ?>" onclick='parent.close()'>
 </form>
